<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hyteck.com.br.headache.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/sDTinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sDataInicio" />

    <EditText
        android:id="@+id/inputDTini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/sHRinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sHoraInicio" />


    <EditText
        android:id="@+id/inputHRini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/sDTfim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sDataFim" />

    <EditText
        android:id="@+id/inputDTfim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/sHRfim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sHoraFim" />


    <EditText
        android:id="@+id/inputHRfim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/sIntensidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sIntensidade" />


    <Spinner
        android:id="@+id/spinnerIntensidade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSaveHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveHead" />

</LinearLayout>
